fix: wrap rolls html in chat

--- a/src/rqg.scss
+++ b/src/rqg.scss
@@ -941,6 +941,7 @@ input.readonly {
 
   .dice-total {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     mix-blend-mode: multiply;
 
